網站版面小修改+商品品項變更 #20151130

--- a/content/feature.html
+++ b/content/feature.html
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -79,8 +79,7 @@
                   <br>
                   <p>藍色洋甘菊camomillaBLU嚴選歐洲原生洋甘菊花，並堅持使用最佳品種德國洋甘菊添加於全系列產品中。</p>
                   <br>
-                  <p>清潔產品皆不添加皂鹼、石化活性劑SLES/SLS/PEG。全面使用椰子油及甜菜根萃取。乳液及防曬產品皆以椰子油、荷荷芭油等植物油為基底，肌膚完全吸收，讓毛
-孔自在呼吸不阻塞。</p>   
+                  <p>清潔產品皆不添加皂鹼、石化活性劑SLES/SLS/PEG。全面使用椰子油及甜菜根萃取。乳液及防曬產品皆以椰子油、荷荷芭油等植物油為基底，肌膚完全吸收，讓毛孔自在呼吸不阻塞。</p>   
                 </section>
                 
                 <section class="box_muti">
@@ -102,6 +101,10 @@
                         <li>
                           <span class="cc-04"></span>
                           <p>荷荷芭油</p>
+                        </li>
+                        <li>
+                          <span class="cc-05"></span>
+                          <p>乳油木果</p>
                         </li>
                      </ul>
                      <br class="clean">
