--- a/content/products-CAM301.html
+++ b/content/products-CAM301.html
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -74,31 +75,32 @@
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊嬰兒護膚修護膏</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;嬰兒護膚修護膏</h3>
                    <span class="price">售價：$680</span>
                    <div id="part_product">
                       <div class="p_cover"><img src="../images/pic_CAM301.jpg" alt="藍色洋甘菊嬰兒護膚修護膏"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含礦物油、歐盟禁用防腐劑Paraben</li>
-                            	<li>不含化學色素，天藍色乳液為德國洋甘菊萃取自然顏色。</li>
-                                <li>富含德國洋甘菊精華，舒緩肌膚不適</li>
-                            	<li>具修護效果，形成保護膜隔離髒污</li>
-                            	<li>尿囊素滋潤舒緩肌膚</li>
+                            	<li>含有10％氧化鋅、甜沒藥、天藍烴，預防寶貝紅屁屁，舒緩肌膚不適。</li>
+                                <li>不含化學色素，獨特的天藍烴配方，使修護膏呈現自然的天藍色。</li>
+                                <li>富含天然荷荷芭油及乳油木果脂與尿囊素，滋潤呵護肌膚。</li>
+                                <li>可於每次換尿布後塗抹修護膏，形成肌膚保護膜，幫寶貝肌膚隔離排泄物髒污，也可用於口水疹等發紅症狀。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：新生兒、嬰兒、兒童</li>
-                            	<li>用途：尿布區保護。寶寶幼嫩的屁股容易受到運動摩擦，及糞便、尿液、尿布材質的刺激。換尿布時，洗完擦乾屁屁後記得塗上修護膏，滋潤保護肌膚</li>
-                            	<li>主要成份：氧化鋅、荷荷芭油、乳油木果脂、德國洋甘菊花萃取、甜沒藥、尿囊素。</li>
+                            	<li>適用對象：新生兒、嬰幼兒
+                                <li>用途：尿布區照護，預防寶寶紅屁屁。建議於每次更換尿布時使用。</li>
+                                <li>用法：清潔肌膚後拭去多餘水份，取適量塗抹於寶寶臀部並待其乾燥。</li>
+                                <li>主要成份：天然荷荷芭油、德國洋甘菊花萃取、蜂蠟、氧化鋅、尿囊素。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：100ML</li>
                             </ul>
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/5502f6c503905545f2000019" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E5%AC%B0%E5%85%92%E8%AD%B7%E8%86%9A%E4%BF%AE%E8%AD%B7%E8%86%8F" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
