--- a/content/products-CAM302.html
+++ b/content/products-CAM302.html
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -74,31 +75,33 @@
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊天然荷荷芭按摩油</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;天然荷荷芭按摩油</h3>
                    <span class="price">售價：$1280</span>
                    <div id="part_product">
                       <div class="p_cover"><img src="../images/pic_CAM302.jpg" alt="藍色洋甘菊天然荷荷芭按摩油"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含礦物油、歐盟禁用防腐劑Paraben</li>
-                                <li>不含化學色素</li>
-                                <li>天然荷荷芭油浸入德國洋甘菊花30天製成，富含德國洋甘菊精華</li>
-                                <li>修護肌膚彈性，幫助預防妊娠紋</li>
-                                <li>維持新生兒肌膚健康、專為脆弱敏感肌膚設計。</li>
+                            	<li>天然荷荷芭油浸入德國洋甘菊花30天製成，富含德國洋甘菊精華。</li>
+                                <li>荷荷芭油能迅速被肌膚吸收並軟化角質、滋潤肌膚，恢復肌膚彈性。</li>
+                                <li>天然荷荷芭油，不含礦物油，不易阻塞毛孔，無油耗味。</li>
+                                <li>具有親水性可調理肌膚保濕度，油性肌膚也無負擔。</li>
+                                <li>幫助孕媽咪預防細紋，也可做為寶貝按摩油、媽媽撫平臉部細紋的平日保養品。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：新生兒、孕媽咪、全家大小</li>
-                            	<li>用途：滋潤肌膚、預防肌膚乾燥不適</li>
-                            	<li>主要成份：荷荷芭油、德國洋甘菊花、甜沒藥</li>
+                            	<li> 適用對象：新生兒、嬰幼兒、全家大小</li>
+                                <li>用途：滋潤肌膚並預防乾燥不適，孕婦塗抹能增加肌膚彈性並預防紋路生成。</li>
+                                <li>用法：清潔肌膚後，取少量按摩油塗抹於肌膚上，輕柔按摩肌膚至吸收。</li>
+                                <li>主要成份：天然荷荷芭油、德國洋甘菊花萃取、甜沒藥。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：150ML</li>
                             </ul>
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/550022552ed0f2c4cb000010" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E5%A4%A9%E7%84%B6%E8%8D%B7%E8%8D%B7%E8%8A%AD%E6%8C%89%E6%91%A9%E6%B2%B9" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
