--- a/content/products-CAM303.html
+++ b/content/products-CAM303.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon"  href="../images/favicon.ico"/>
 <link rel="icon" href="../images/favicon.ico"/>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>精華鎮靜潤膚乳液 CAM303│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<title>精華鎮定潤膚乳液 CAM303│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/xue_201503.css"/>
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -69,36 +70,37 @@
                  <h3 class="hidden">商品櫥窗</h3>
                  <div class="bar_tool">
                     <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;精華清潔保養系列&gt;精華鎮靜潤膚乳液</div>
+                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;精華清潔保養系列&gt;精華鎮定潤膚乳液</div>
                     <br class="clean">
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊精華鎮靜潤膚乳液</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;精華鎮定潤膚乳液</h3>
                    <span class="price">售價：$680</span>
                    <div id="part_product">
-                      <div class="p_cover"><img src="../images/pic_CAM303.jpg" alt="藍色洋甘菊精華鎮靜潤膚乳液"></div>
+                      <div class="p_cover"><img src="../images/pic_CAM303.jpg" alt="藍色洋甘菊精華鎮定潤膚乳液"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含礦物油、歐盟禁用防腐劑Paraben</li>
-                            	<li>不含化學色素，天藍色乳液為德國洋甘菊萃取自然顏色</li>
-                                <li>富含德國洋甘菊精華，舒緩肌膚不適</li>
-                                <li>荷荷芭油、乳油木果脂，配方滋潤舒緩肌膚</li>
-                                <li>專為新生兒脆弱肌膚設計</li>
+                            	<li>添加豐富德國洋甘菊精油，深層修護肌膚，舒緩肌膚乾燥之不適。</li>
+                                <li>不含化學色素，獨特的天藍烴配方，使乳液呈現自然的天藍色。</li>
+                                <li>天然荷荷芭油、乳油木果脂，滋潤肌膚易吸收，維護肌膚天然保水層。</li>
+                                <li>使用歐盟認證低敏天然配方，獨特痱子粉香氛設計，安撫寶貝情緒。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：新生兒、嬰兒、全家大小</li>
-                            	<li>用途：保護滋潤肌膚、預防肌膚乾燥不適</li>
-                            	<li>主要成份：荷荷芭油、乳油木果脂、德國洋甘菊花萃取</li>
+                            	<li>適用對象：新生兒、嬰幼兒、全家大小</li>
+                                <li>用途：滋潤與鎮定肌膚，預防肌膚乾燥不適。</li>
+                                <li>用法：清潔肌膚後，取適量乳液塗抹於寶寶臉部或身體，輕柔按摩至吸收。</li>
+                                <li>主要成份：天然荷荷芭油、德國洋甘菊花萃取、乳油木果脂。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：200ML</li>
                             </ul>
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/5506d5fc2ed0f2a69200009d" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E7%B2%BE%E8%8F%AF%E9%8E%AE%E5%AE%9A%E6%BD%A4%E8%86%9A%E4%B9%B3%E6%B6%B2" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
