--- a/content/products-CAM308.html
+++ b/content/products-CAM308.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon"  href="../images/favicon.ico"/>
 <link rel="icon" href="../images/favicon.ico"/>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>不流淚洗髮精 CAM308│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<title>不流淚精華洗髮露 CAM308│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/xue_201503.css"/>
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -69,36 +70,37 @@
                  <h3 class="hidden">商品櫥窗</h3>
                  <div class="bar_tool">
                     <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;精華清潔保養系列&gt;不流淚洗髮精</div>
+                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;精華清潔保養系列&gt;不流淚精華洗髮露</div>
                     <br class="clean">
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊不流淚洗髮精</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;不流淚精華洗髮露</h3>
                    <span class="price">售價：$520</span>
                    <div id="part_product">
-                      <div class="p_cover"><img src="../images/pic_CAM308.jpg" alt="藍色洋甘菊不流淚洗髮精"></div>
+                      <div class="p_cover"><img src="../images/pic_CAM308.jpg" alt="藍色洋甘菊不流淚精華洗髮露"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含礦物油、歐盟禁用防腐劑Paraben</li>
-                            	<li>不含常見刺激性防腐劑MI/MCI</li>
-                                <li>不含化學色素、皂鹼</li>
-                                <li>富含德國洋甘菊精華，幫助舒緩頭皮</li>
-                                <li>溫和不流淚配方、易洗淨不殘留。</li>
+                            	<li>椰子油萃取天然洗淨成份，溫和清潔頭皮與頭髮髒汙，呵護嬰兒嬌嫩肌膚。</li>
+                                <li>天然德國洋甘菊精華舒緩並預防頭皮不適，也適用於成人清潔頭髮。</li>
+                                <li>溫和不流淚配方，易沖洗不殘留。</li>
+                                <li>歐盟認證低敏天然配方，獨特洋甘菊香氛設計，幫助心情放鬆平靜。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：新生兒、嬰兒、全家大小</li>
-                                <li>用途：清潔並滋潤頭皮</li>
-                                <li>主要成份：椰油酰胺丙基甜菜鹼、德國洋甘菊花萃取</li>
+                            	<li>適用對象：新生兒、嬰幼兒、全家大小</li>
+                                <li>用途：清潔並滋潤頭皮、頭髮。</li>
+                                <li>用法：將寶寶頭髮打濕後，取適量洗髮露清潔寶寶頭皮，再以清水沖洗即可。</li>
+                                <li>主要成份：椰油醯胺丙基甜菜鹼、德國洋甘菊花萃取。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：200ML</li>
                             </ul>
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/5506d3e7e37ec634e100005b" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E4%B8%8D%E6%B5%81%E6%B7%9A%E7%B2%BE%E8%8F%AF%E6%B4%97%E9%AB%AE%E9%9C%B2" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
