--- a/content/products-CAM309.html
+++ b/content/products-CAM309.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon"  href="../images/favicon.ico"/>
 <link rel="icon" href="../images/favicon.ico"/>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>柔嫩肌膚泡泡浴露 CAM309│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<title>極致呵護泡泡浴露 CAM309│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/xue_201503.css"/>
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -69,31 +70,31 @@
                  <h3 class="hidden">商品櫥窗</h3>
                  <div class="bar_tool">
                     <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;精華清潔保養系列&gt;柔嫩肌膚泡泡浴露</div>
+                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;精華清潔保養系列&gt;極致呵護泡泡浴露</div>
                     <br class="clean">
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊柔嫩肌膚泡泡浴露</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;極致呵護泡泡浴露</h3>
                    <span class="price">售價：$520</span>
                    <div id="part_product">
-                      <div class="p_cover"><img src="../images/pic_CAM309.jpg" alt="藍色洋甘菊柔嫩肌膚泡泡浴露"></div>
+                      <div class="p_cover"><img src="../images/pic_CAM309.jpg" alt="藍色洋甘菊極致呵護泡泡浴露"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含礦物油、歐盟禁用防腐劑Paraben</li>
-                            	<li>不含常見刺激性防腐劑MI/MCI</li>
-                                <li>不含化學色素、皂鹼</li>
-                                <li>添加德國洋甘菊精華及蘆薈，溫和清潔肌膚</li>
-                                <li>天然植物萃取潔淨成分、易洗淨不殘留</li>
-                                <li>泡泡浴後不須另外沖洗</li>
+                            	<li>椰子油萃取天然洗淨成份，清爽不殘留。</li>
+                                <li>添加尿素與蘆薈精華保濕因子，維護肌膚天然保水層，洗後肌膚滑嫩不乾澀。</li>
+                                <li>天然德國洋甘菊精華，安撫嬰兒嬌弱肌膚。</li>
+                                <li>溫和不流淚配方，用後不需另外沖水。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：新生兒、嬰兒、全家大小</li>
-                                <li>用途：清潔並滋潤全身肌膚</li>
-                                <li>主要成份：椰油酰胺丙基甜菜鹼、德國洋甘菊花萃取、蘆薈</li>
+                            	<li>適用對象：新生兒、嬰幼兒、全家大小</li>
+                                <li>用途：清潔並滋潤全身肌膚。</li>
+                                <li>用法：取適量泡泡浴露於浴盆中，再以大量溫水稀釋產生泡沫。</li>
+                                <li>主要成份：椰油醯胺丙基甜菜鹼、德國洋甘菊花萃取、蘆薈。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：500ML</li>
                             </ul>
                       </div>
