--- a/content/products-CAM316.html
+++ b/content/products-CAM316.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon"  href="../images/favicon.ico"/>
 <link rel="icon" href="../images/favicon.ico"/>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>私密潔浴露PH5.5中性日用型 CAM316│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<title>私密潔浴露中性日用型 CAM316│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/xue_201503.css"/>
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -69,36 +70,37 @@
                  <h3 class="hidden">商品櫥窗</h3>
                  <div class="bar_tool">
                     <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;女性私密清潔系列&gt;私密潔浴露PH5.5中性日用型</div>
+                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;女性私密清潔系列&gt;私密潔浴露中性日用型</div>
                     <br class="clean">
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊私密潔浴露PH5.5中性日用型</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;私密潔浴露中性日用型</h3>
                    <span class="price">售價：$600</span>
                    <div id="part_product">
-                      <div class="p_cover"><img src="../images/pic_CAM316.jpg" alt="藍色洋甘菊私密潔浴露PH5.5中性日用型"></div>
+                      <div class="p_cover"><img src="../images/pic_CAM316.jpg" alt="藍色洋甘菊私密潔浴露中性日用型"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含歐盟禁用防腐劑Paraben</li>
-                                <li>不含常見刺激性防腐劑MI/MCI</li>
-                                <li>不含化學色素、皂鹼</li>
-                                <li>添加德國洋甘菊萃取、尿素潤澤肌膚</li>
-                                <li>椰子油萃取潔淨成分、不乾澀</li>
+                            	<li>天然德國洋甘菊精華及尿素保濕配方，舒緩並滋潤私密肌膚。</li>
+                                <li>椰子油萃取天然洗淨成份，易洗淨、清爽不殘留。</li>
+                                <li>亦可用於臉部清潔、全身沐浴，外出旅遊、跑健身房一罐搞定。</li>
+                                <li>獨特淡雅洋甘菊香氛，感受洋甘菊天然清新，放鬆心情。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：在意私密部位保養之各年齡層女性</li>
-                                <li>用途：清潔私密部位、調理肌膚</li>
-                                <li>主要成份：椰油酰胺丙基甜菜鹼、德國洋甘菊花萃取、尿素</li>
+                            	<li>適用對象：在意私密肌膚保養之各年齡層女性</li>
+                                <li>用途：清潔與保養女性私密肌膚。</li>
+                                <li>用法：將壓頭轉正，壓取適量潔浴露清潔私密肌膚後，以清水沖洗即可。</li>
+                                <li>主要成份：椰油醯胺丙基甜菜鹼、德國洋甘菊花萃取、尿素。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：300ML</li>
                             </ul>
-                         <h4>【產品檢測報告】</h4>
+                         <!--<h4>【產品檢測報告】</h4>
                              <ul>
                                 <li><a href="../files/SGS_CAM-316.pdf" rel="external">SGS酸鹼值報告</a></li> 
-                             </ul>   
+                             </ul>-->
                       </div>
                       
                       <div class="box_btn">
