--- a/content/products-SOL001.html
+++ b/content/products-SOL001.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon"  href="../images/favicon.ico"/>
 <link rel="icon" href="../images/favicon.ico"/>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>極清透高效防曬乳SPF50+ SOL001│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<title>極清透高效防曬乳SPF50+/PA++ SOL001│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/xue_201503.css"/>
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -69,36 +70,37 @@
                  <h3 class="hidden">商品櫥窗</h3>
                  <div class="bar_tool">
                     <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;親子防曬保養系列&gt;極清透高效防曬乳SPF50+</div>
+                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;親子防曬保養系列&gt;極清透高效防曬乳SPF50+/PA++</div>
                     <br class="clean">
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊極清透高效防曬乳SPF50+</h3>
-                   <span class="price">售價：$1080</span>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;極清透高效防曬乳SPF50+/PA++</h3>
+                   <span class="price">售價：$950</span>
                    <div id="part_product">
-                      <div class="p_cover"><img src="../images/pic_SOL001.jpg" alt="藍色洋甘菊極清透高效防曬乳SPF50+"></div>
+                      <div class="p_cover"><img src="../images/pic_SOL001.jpg" alt="藍色洋甘菊極清透高效防曬乳SPF50+/PA++"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含礦物油、化學色素</li>
-                                <li>不含歐盟禁用防腐劑Paraben</li>
-                                <li>天然椰子油為基底，添加德國洋甘菊精華及甜沒藥，幫助舒緩肌膚、強化肌膚抵抗力</li>
-                                <li>不油膩不留白好推勻</li>
-                                <li>專為脆弱肌膚設計</li>
+                            	<li>天然椰子油為基底，添加德國洋甘菊精華及甜沒藥，幫助舒緩肌並強化肌膚抵抗力，防曬同時保養肌膚。</li>
+                                <li>不油膩、不留白、好推勻。</li>
+                                <li>建議長時間於室外或出遊時使用。</li>
+                                <li>建議6個月以上嬰兒使用，適用於身體部位肌膚。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：嬰兒、全家大小</li>
-                                <li>用途：防曬、預防肌膚受到陽光刺激傷害。推薦全家外出旅遊時使用</li>
-                                <li>主要成份：甘油、三辛酸葵酸甘油酯(椰子油萃取)、棕櫚醇、德國洋甘菊花萃取、甜沒藥</li>
+                            	<li>適用對象：嬰幼兒、全家大小</li>
+                                <li>用途：防曬、預防肌膚受到陽光刺激傷害。推薦全家外出旅遊時使用。</li>
+                                <li>用法：取適量防曬乳塗抹需防曬之身體部位，並視需要加強塗抹。</li>
+                                <li>主要成份：甘油、三辛酸葵酸甘油酯(椰子油萃取)、棕櫚醇、德國洋甘菊花萃取、甜沒藥。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：100ML</li>
                             </ul>
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/5502f9065eb034b38c000012" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E6%A5%B5%E6%B8%85%E9%80%8F%E9%AB%98%E6%95%88%E9%98%B2%E6%9B%AC%E4%B9%B3spf50pa" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
