--- a/content/qc.html
+++ b/content/qc.html
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -102,6 +102,15 @@
                      	<li><a href="../files/report_06.pdf" title="SGS防曬係數報告_SOL002" rel="external">
                      			<h5>SGS防曬<br>係數報告</h5>
                      		</a></li>
+                     	<li><a href="../files/report_07.pdf" title="SGS私密潔浴露報告_PH3.5" rel="external">
+                     			<h5>SGS私密<br>潔浴露報告</h5>
+                     		</a></li>
+                     	<li><a href="../files/report_08.pdf" title="SGS私密潔浴露報告_PH5.5" rel="external">
+                     			<h5>SGS私密<br>潔浴露報告</h5>
+                     		</a></li>
+                     	<li><a href="../files/report_09.pdf" title="SGS私密潔浴露報告_PH8.5" rel="external">
+                     			<h5>SGS私密<br>潔浴露報告</h5>
+                     		</a></li>
                      </ul>
                   </div>
                 </section>
@@ -132,6 +141,26 @@
                         </li>
                         <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-06.jpg" title="義大利原廠工作影像06">
                               <img src="../images/pic_italy-s06.jpg" alt="義大利原廠工作影像06">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-07.jpg" title="義大利原廠工作影像07">
+                              <img src="../images/pic_italy-s07.jpg" alt="義大利原廠工作影像07">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-08.jpg" title="義大利原廠工作影像08">
+                              <img src="../images/pic_italy-s08.jpg" alt="義大利原廠工作影像08">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-09.jpg" title="義大利原廠工作影像09">
+                              <img src="../images/pic_italy-s09.jpg" alt="義大利原廠工作影像09">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-10.jpg" title="義大利原廠工作影像10">
+                              <img src="../images/pic_italy-s10.jpg" alt="義大利原廠工作影像10">
+                           </a>
+                        </li>
+                        <li><a class="fancybox" rel="gallery1" href="../images/pic_italy-11.jpg" title="義大利原廠工作影像11">
+                              <img src="../images/pic_italy-s11.jpg" alt="義大利原廠工作影像11">
                            </a>
                         </li>
                      </ul>
