--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="mailto:info@axceedtrade.com" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -67,6 +67,18 @@
              		<a href="content/products-CAM302.html" title="詳細介紹">詳細介紹</a>
              	</li>
              	<li>
+             		<img src="images/pic_hotsale-04.jpg" alt="精華鎮定潤膚乳液">
+             		<h4>精華鎮定潤膚乳液</h4>
+             		<p>添加豐富德國洋甘菊精油，深層修護肌膚，舒緩肌膚乾燥之不適。不含化學色素，獨特的...</p>
+             		<a href="content/products-CAM303.html" title="詳細介紹">詳細介紹</a>
+             	</li>
+             	<li>
+             		<img src="images/pic_hotsale-05.jpg" alt="新生肌膚沐浴露">
+             		<h4>新生肌膚沐浴露</h4>
+             		<p>溫和不流淚配方，一瓶可洗全身，使用於嬰兒泡澡時，用後不需另外沖水。椰子油萃取天然洗淨成份，...</p>
+             		<a href="content/products-CAM304.html" title="詳細介紹">詳細介紹</a>
+             	</li>
+             	<!--<li>
              		<img src="images/pic_hotsale-02.jpg" alt="私密潔浴露中性日用型 PH5.5">
              		<h4>私密潔浴露<br>中性日用型 PH5.5</h4>
              		<p>清潔成分為天然椰子油萃取，搭配保濕尿素，呵護私密部位，潤澤肌膚...</p>
@@ -77,7 +89,7 @@
              		<h4>清透高效防曬乳SPF30</h4>
              		<p>乳油木果脂和椰子油為基底，溫和有效地阻擋UVA / UVB傷害不含石化礦物油，保持毛孔通暢...</p>
              		<a href="content/products-SOL002.html" title="詳細介紹">詳細介紹</a>
-             	</li>
+             	</li>-->
              </ul>
              <br class="clean">
           </section>
