--- a/content/products-CAM314.html
+++ b/content/products-CAM314.html
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -74,32 +75,32 @@
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊精華潔顏露</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;精華潔顏露</h3>
                    <span class="price">售價：$520</span>
                    <div id="part_product">
                       <div class="p_cover"><img src="../images/pic_CAM314.jpg" alt="藍色洋甘菊精華潔顏露"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含歐盟禁用防腐劑Paraben</li>
-                                <li>不含常見刺激性防腐劑MI/MCI</li>
-                                <li>不含化學色素、皂鹼</li>
-                                <li>添加保濕尿素、潤澤肌膚</li>
-                                <li>溫和不流淚配方、洗後不殘留</li>
-                                <li>椰子油及月桂葉萃取洗淨成分、天然無負擔</li>
+                            	<li>天然德國洋甘菊與甜菜根、月桂葉萃取精華及尿素保濕成份，溫和清潔臉部，幫助舒緩、滋潤肌膚。</li>
+                                <li>椰子油萃取天然洗淨成份，無添加刺激性化學界面活性劑。</li>
+                                <li>洗後不緊繃、不乾澀、極佳保濕感，幫助寶貝臉部肌膚打造健康基礎。</li>
+                                <li>敏弱肌、乾燥肌、粉刺問題肌之成人也適用。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：新生兒、嬰兒、全家大小</li>
-                                <li>用途：清潔臉部肌膚、維持肌膚健康</li>
-                                <li>主要成份：月桂醇硫酸酯鎂、德國洋甘菊花萃取、尿素</li>
+                            	<li>適用對象：新生兒、嬰幼兒、全家大小</li>
+                                <li>用途：清潔臉部肌膚、維持肌膚健康，嬰兒出生起即可使用。</li>
+                                <li>用法：將壓頭轉正，壓取適量潔顏露清潔寶寶臉部肌膚後，以清水沖洗即可。</li>
+                                <li>主要成份：月桂醇硫酸脂鎂、德國洋甘菊花萃取、尿素。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：300ML</li>
                             </ul>
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/5502f7ce5eb034937700002e" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E7%B2%BE%E8%8F%AF%E6%BD%94%E9%A1%8F%E9%9C%B2-1" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
