--- a/content/products-CAM315.html
+++ b/content/products-CAM315.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon"  href="../images/favicon.ico"/>
 <link rel="icon" href="../images/favicon.ico"/>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>私密潔浴露PH3.5弱酸呵護型 CAM315│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
+<title>私密潔浴露弱酸呵護型 CAM315│藍色洋甘菊camomillaBLU 安全天然充滿愛與歡笑的肌膚保養</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="../css/reset.css" />
 <link rel="stylesheet" href="../css/xue_201503.css"/>
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="contact.html" title="聯絡我們" class="subnav-02">聯絡我們</a></li>
+          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -57,9 +57,10 @@
           <aside id="submenu">
             <!-- InstanceBeginEditable name="sub-menu" -->
             <ul>
-              <li><a href="shop.html#shoplist-01" title="精華清潔保養">精華清潔保養</a></li>
-              <li><a href="shop.html#shoplist-02" title="女性私密清潔">女性私密清潔</a></li>
-              <li><a href="shop.html#shoplist-03" title="親子防曬保養">親子防曬保養</a></li>
+              <li><a href="shop.html#shoplist-01" title="溫和不流淚清潔系列">溫和不流淚<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-01-2" title="精華滋潤保養系列">精華滋潤<br>保養系列</a></li>
+              <li><a href="shop.html#shoplist-02" title="女性私密清潔系列">女性私密<br>清潔系列</a></li>
+              <li><a href="shop.html#shoplist-03" title="親子防曬保養系列">親子寶寶<br>安心曬系列</a></li>
             </ul>
             <!-- InstanceEndEditable -->
         </aside>
@@ -69,40 +70,42 @@
                  <h3 class="hidden">商品櫥窗</h3>
                  <div class="bar_tool">
                     <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
-                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;女性私密清潔系列&gt;私密潔浴露PH3.5弱酸呵護型</div>
+                    <div class="bar_cookie"><span>首頁</span>&gt;商品櫥窗&gt;女性私密清潔系列&gt;私密潔浴露弱酸呵護型</div>
                     <br class="clean">
                 </div>
                 
                 <section id="box_shop">
-                   <h3>藍色洋甘菊私密潔浴露PH3.5弱酸呵護型</h3>
+                   <h3>藍色洋甘菊&nbsp;&nbsp;私密潔浴露弱酸呵護型</h3>
                    <span class="price">售價：$630</span>
                    <div id="part_product">
-                      <div class="p_cover"><img src="../images/pic_CAM315.jpg" alt="藍色洋甘菊私密潔浴露PH3.5弱酸呵護型"></div>
+                      <div class="p_cover"><img src="../images/pic_CAM315.jpg" alt="藍色洋甘菊私密潔浴露弱酸呵護型"></div>
                       <div class="p_info">
                          <h4>【產品特色】</h4>
                             <ul>
-                            	<li>義大利原裝進口</li>
-                            	<li>不含歐盟禁用防腐劑Paraben</li>
-                                <li>不含常見刺激性防腐劑MI/MCI</li>
-                                <li>不含化學色素、皂鹼</li>
-                                <li>添加德國洋甘菊萃取、乳酸成分</li>
-                                <li>獨家洋甘菊香氛、幫助中和異味</li>
+                            	<li>天然乳酸維持私密肌膚健康弱酸性環境，增強私密肌膚自然防禦力。</li>
+                                <li>添加德國洋甘菊精華，舒緩私密肌膚不適。</li>
+                                <li>獨特淡雅洋甘菊香氛，放鬆心情舒緩壓力。</li>
+                                <li>適合孕期及產後或生理期間、性行為後，分泌物較多或在意異味之女性使用。</li>
+                                <li>多數成年女性之私密肌膚酸鹼值偏酸，需使用專屬的潔膚用品幫助維持健康。</li>
                             </ul>
                          <h4>【產品說明】</h4>
                             <ul>
-                            	<li>適用對象：生理期、分泌物較多、或在意異味之成年女性</li>
-                                <li>用途：清潔私密部位。成年女性私密肌膚的酸鹼值偏酸，需要使用專屬的潔膚用品幫助維持健康</li>
-                                <li>主要成份：月桂醇硫酸酯鎂、德國洋甘菊花萃取、乳酸</li>
+                            	<li>適用對象：生理期、分泌物較多或在意異味之女性</li>
+                                <li>用途：清潔女性私密肌膚。</li>
+                                <li>用法：將壓頭轉正，壓取適量潔浴露清潔私密肌膚後，以清水沖洗即可。</li>
+                                <li>主要成份：椰油醯胺丙基甜菜鹼、德國洋甘菊花萃取、乳酸。</li>
+                                <li>保存期限：三年（請詳見外包裝標示）</li>
+                                <li>產地：義大利</li>
                             	<li>容量：300ML</li>
                             </ul>
-                         <h4>【產品檢測報告】</h4>
+                         <!--<h4>【產品檢測報告】</h4>
                              <ul>
                                 <li><a href="../files/SGS_CAM-315.pdf" rel="external">SGS酸鹼值報告</a></li> 
-                             </ul>
+                             </ul>-->
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/5502f8065eb034b38c00000b" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E7%A7%81%E5%AF%86%E6%BD%94%E6%B5%B4%E9%9C%B2ph35-%E5%BC%B1%E9%85%B8%E5%91%B5%E8%AD%B7%E5%9E%8B" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
